# nanotuya/api.py
@@ -37,18 +37,33 @@ def _url_format(id: str, endpoint: str, url: str = DEVICE_URL) -> str:
     return url
 
 
+def _request(url: str, payload: dict = None, method: str = None):
+    response = None
+    if payload or method == "post":
+        response = requests.post(
+            url=url,
+            headers=_api_request_headers(),
+            data=json.dumps(payload),
+        )
+    elif not payload:
+        response = requests.get(
+            url=url,
+            headers=_api_request_headers()
+        )
+
+    _logger(response=response)
+    return json.loads(response.content.decode())
+
+
 async def get_device_functions(device_id: str) -> dict:
     """
     Get the list of available device functions based on its ID.
     :param device_id: Unique id of the Tuya device
     :return: Dictionary with HTTP response
     """
-    response = requests.get(
-        url=_url_format(id=device_id, endpoint="functions"),
-        headers=_api_request_headers(),
-    )
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=device_id, endpoint="functions", url=DEVICE_URL)
+    response = _request(url=url)
+    return response
 
 
 async def get_device_status(device_id: str):
@@ -57,12 +72,9 @@ async def get_device_status(device_id: str):
     :param device_id: Unique id of the Tuya device
     :return: Dictionary with HTTP response
     """
-    response = requests.get(
-        url=_url_format(id=device_id, endpoint="status"),
-        headers=_api_request_headers(),
-    )
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=device_id, endpoint="status", url=DEVICE_URL)
+    response = _request(url=url)
+    return response
 
 
 async def post_device_commands(device_id: str, payload: dict) -> dict:
@@ -80,13 +92,9 @@ async def post_device_commands(device_id: str, payload: dict) -> dict:
     :return: Dictionary with HTTP response
     """
     # fmt: on
-    response = requests.post(
-        url=_url_format(id=device_id, endpoint="commands"),
-        headers=_api_request_headers(),
-        data=json.dumps(payload),
-    )
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=device_id, endpoint="commands", url=DEVICE_URL)
+    response = _request(url=url, payload=payload)
+    return response
 
 
 async def get_ir_device_remotes(device_id: str) -> dict:
@@ -95,12 +103,9 @@ async def get_ir_device_remotes(device_id: str) -> dict:
     :param device_id: Unique id of the Tuya device (in Tuya's API it is called 'infrared_id')
     :return: Dictionary with with HTTP response.
     """
-    response = requests.get(
-        url=_url_format(id=device_id, endpoint="remotes", url=IR_URL),
-        headers=_api_request_headers(),
-    )
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=device_id, endpoint="remotes", url=IR_URL)
+    response = _request(url=url)
+    return response
 
 
 async def get_ir_remote_keys(device_id: str, remote_id: str) -> dict:
@@ -109,50 +114,59 @@ async def get_ir_remote_keys(device_id: str, remote_id: str) -> dict:
     natively supported keys and learned keys.
     :param device_id: Unique id of the Tuya device (in Tuya's API it is called 'infrared_id')
     :param remote_id: Unique remote id bound to the IR device, returned by 'get_ir_device_remotes'.
-    Returns:
+    :return: Dictionary with HTTP response
     """
     keys = {}
-    base_url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
+    url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
 
     # Native keys and learned keys have different endpoints, call both and put the results in one dictionary.
     # If remote does not have any native keys, the response is "code:2010, msg:device not exist".
     # If learned keys do not exist, the response is an empty list.
-    response = requests.get(
-        url=f"{base_url}/{remote_id}/keys",
-        headers=_api_request_headers(),
-    )
-    _logger(response=response)
-    keys["native"] = json.loads(response.content.decode())
 
-    response = requests.get(
-        url=f"{base_url}/{remote_id}/learning-codes",
-        headers=_api_request_headers(),
-    )
-    _logger(response=response)
-    keys["custom"] = json.loads(response.content.decode())
+    k_url = f"{url}/{remote_id}/keys"
+    keys["native"] = _request(url=k_url)
+
+    lc_url = f"{url}/{remote_id}/learning-codes"
+    keys["custom"] = _request(url=lc_url)
 
     return keys
 
 
 async def post_ir_remote_key(device_id: str, remote_id: str, payload: dict) -> dict:
-    base_url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
+    # fmt: off
+    """
+    Trigger key / code on the remote bound to IR device. There are 2 types of keys on Tuya IR
+    devices:
+        * native - out of the box keys, provided with remotes for different brands
+        * custom - DIY keys learned by the IR device
+
+    Body for "custom" key (e.g. DIY):
+        {
+            "type": "custom",
+            "code": "<value>"
+        }
+    Body for "native" key:
+        {
+            "type": "custom",
+            "key": "<value>"
+        }
+
+    :param device_id: Unique id of the Tuya device (in Tuya's API it is called 'infrared_id')
+    :param remote_id: Unique remote id bound to the IR device, returned by 'get_ir_device_remotes'.
+    :param payload: Request body in JSON format
+    :return: Dictionary with HTTP response
+    """
+    url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
 
     # {"code" : <value>} for "custom", {"key": <value>} for "native"
     if payload.get("type", "native") == "custom":
-        response = requests.post(
-            url=f"{base_url}/{remote_id}/learning-codes",
-            headers=_api_request_headers(),
-            data=json.dumps(payload),
-        )
+        lc_url = f"{url}/{remote_id}/learning-codes"
+        response = _request(url=lc_url, payload=payload)
     else:
-        response = requests.post(
-            url=f"{base_url}/{remote_id}/command",
-            headers=_api_request_headers(),
-            data=json.dumps(payload),
-        )
+        k_url = f"{url}/{remote_id}/command"
+        response = _request(url=k_url, payload=payload)
 
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    return response
 
 
 async def get_homes(user_id: str) -> dict:
@@ -161,15 +175,9 @@ async def get_homes(user_id: str) -> dict:
     :param user_id: ID of the user (can be obtained from Tuya IoT portal).
     :return: Dictionary with with HTTP response.
     """
-    base_url = _url_format(id=user_id, endpoint='homes', url=USER_URL)
-
-    response = requests.get(
-        url=base_url,
-        headers=_api_request_headers(),
-    )
-
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=user_id, endpoint='homes', url=USER_URL)
+    response = _request(url=url)
+    return response
 
 
 async def get_scenes(home_id: str) -> dict:
@@ -178,15 +186,9 @@ async def get_scenes(home_id: str) -> dict:
     :param home_id: ID of the home (user who is used to "Link Devices by App Account" should be a "Home Owner")
     :return: Dictionary with with HTTP response.
     """
-    base_url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
-
-    response = requests.get(
-        url=base_url,
-        headers=_api_request_headers(),
-    )
-
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
+    response = _request(url=url)
+    return response
 
 
 async def post_trigger_scene(home_id: str, scene_id: str) -> dict:
@@ -196,12 +198,6 @@ async def post_trigger_scene(home_id: str, scene_id: str) -> dict:
     :param scene_id: Scene ID within Tuya App.
     :return: Dictionary with with HTTP response.
     """
-    base_url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
-
-    response = requests.post(
-        url=f"{base_url}/{scene_id}/trigger",
-        headers=_api_request_headers(),
-    )
-
-    _logger(response=response)
-    return json.loads(response.content.decode())
+    url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
+    response = _request(url=f"{url}/{scene_id}/trigger", method="post")
+    return response
